# Risk-Kit

./: .gitignore  Dockerfile  Drawdown s&p 500.ipynb  Markowitz  Markowitz.py  Max Drowdown and Duration.py  README.md  empirical_var.py  main.py  project.py  project2.py  pyproject.toml  random-weights-risk-metrics.py  render.yaml  requirements.txt  risk kit.py  run_gui.bat  run_gui.sh  streamlit_app.py  streamlit_i18n.py  var_cvar.py  ~$main.py
.streamlit/: config.toml
Bouloutas - Minimum Variance vs Equal Weight Portfolio/: markowitz vs equal weight portfolio.py
Katerinis - Markowitz Efficient Frontier/: markowitz.py
Marios - Min CVAR/: min_cvar.py
Theodoros - Markowitz Minimum Variance Portfolio/: Markowitz.py
Theodoros - VaR and CVaR/: var_cvar.py
markowitz/: Markowitz.py  markowitz_docs.md
scripts/: run_all.py
src/crisis_radar/: __init__.py  calibration.py  cli.py  config.py  data.py  evaluation.py  features.py  labels.py  live.py  models.py  pipeline.py  plotting.py  split.py  utils.py
